--- a/lab07/lab07.ipynb
+++ b/lab07/lab07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,13 +14,7 @@
       "2. Record Expense\n",
       "3. View Records\n",
       "4. View My Spendings\n",
-      "5. Exit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "5. Exit\n",
       "Enter the details of income\n",
       "...MY EXPENSE TRACKER...\n",
       "1. Record Income\n",
@@ -28,52 +22,7 @@
       "3. View Records\n",
       "4. View My Spendings\n",
       "5. Exit\n",
-      "Enter the details of expense\n",
-      "...MY EXPENSE TRACKER...\n",
-      "1. Record Income\n",
-      "2. Record Expense\n",
-      "3. View Records\n",
-      "4. View My Spendings\n",
-      "5. Exit\n",
-      "Enter the details of expense\n",
-      "...MY EXPENSE TRACKER...\n",
-      "1. Record Income\n",
-      "2. Record Expense\n",
-      "3. View Records\n",
-      "4. View My Spendings\n",
-      "5. Exit\n",
-      "Enter the details of expense\n",
-      "...MY EXPENSE TRACKER...\n",
-      "1. Record Income\n",
-      "2. Record Expense\n",
-      "3. View Records\n",
-      "4. View My Spendings\n",
-      "5. Exit\n",
-      "Enter the details of expense\n",
-      "...MY EXPENSE TRACKER...\n",
-      "1. Record Income\n",
-      "2. Record Expense\n",
-      "3. View Records\n",
-      "4. View My Spendings\n",
-      "5. Exit\n",
-      "Enter the details of expense\n",
-      "...MY EXPENSE TRACKER...\n",
-      "1. Record Income\n",
-      "2. Record Expense\n",
-      "3. View Records\n",
-      "4. View My Spendings\n",
-      "5. Exit\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\hp\\Desktop\\Python\\github\\MscDSB-MDS171-23122141-Vedant\\lab07\\lab07.ipynb Cell 1\u001b[0m line \u001b[0;36m7\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/hp/Desktop/Python/github/MscDSB-MDS171-23122141-Vedant/lab07/lab07.ipynb#W0sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m4. View My Spendings\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/hp/Desktop/Python/github/MscDSB-MDS171-23122141-Vedant/lab07/lab07.ipynb#W0sZmlsZQ%3D%3D?line=71'>72</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m5. Exit\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/hp/Desktop/Python/github/MscDSB-MDS171-23122141-Vedant/lab07/lab07.ipynb#W0sZmlsZQ%3D%3D?line=73'>74</a>\u001b[0m choice \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mEnter your choice: \u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39;49mstrip())\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/hp/Desktop/Python/github/MscDSB-MDS171-23122141-Vedant/lab07/lab07.ipynb#W0sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m \u001b[39mif\u001b[39;00m choice \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/hp/Desktop/Python/github/MscDSB-MDS171-23122141-Vedant/lab07/lab07.ipynb#W0sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter the details of income\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "Thank you\n"
      ]
     }
    ],
@@ -166,7 +115,8 @@
     "    elif choice == 4:\n",
     "        myexpense.calculate_transactions()\n",
     "    elif choice == 5:\n",
-    "        exit()\n",
+    "        print(\"Thank you\")\n",
+    "        break\n",
     "    else:\n",
     "        print(\"Invalid choice\")\n"
    ]
