--- a/LAB/lab02/lab 02.ipynb
+++ b/LAB/lab02/lab 02.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45FourFive\n"
+      "34ThreeFour\n"
      ]
     }
    ],
