--- a/LAB/lab03/lab03.ipynb
+++ b/LAB/lab03/lab03.ipynb
@@ -2,24 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "542.94\n"
+     ]
+    }
+   ],
    "source": [
     "values = [761, 123, 585, 275, 194, 840, 999, 622, 763, 40, 825, 687, 402, 338, 611, 987, 739, 95, 819, 568, 320, 126, 688, 948, 514, 223, 751, 379, 857, 767, 492, 162, 437, 934, 430, 343, 725, 511, 580, 678, 708, 823, 346, 179, 786, 663, 195, 890, 267, 502, 214, 300, 786, 961, 235, 559, 992, 919, 948, 318, 57, 787, 653, 317, 305, 172, 966, 182, 970, 17, 89, 624, 629, 595, 485, 752, 984, 978, 460, 124, 321, 256, 614, 852, 811, 561, 127, 207, 406, 615, 888, 391, 691, 470, 911, 401, 137, 600, 478, 682]\n",
-    "n = len(values)\n",
-    "def mean():\n",
+    "\n",
+    "def mean(x):\n",
     "    totalsum = 0\n",
     "    count = 0\n",
     "\n",
-    "    for i in values:\n",
+    "    for i in x:\n",
     "        totalsum += i\n",
     "        count += 1\n",
     "\n",
-    "        average = totalsum / count\n",
+    "    average = totalsum / count\n",
     "    return average\n",
     "    \n",
-    "mean()\n",
+    "#mean()\n",
     "\n",
     "def min():\n",
     "    minvalue =values[0]\n",
@@ -37,7 +45,7 @@
     "\n",
     "\n",
     "\n",
-    "def max():\n",
+    "def max(gshsjhdjh):\n",
     "    maxvalue =values[0]\n",
     "    for i in values:\n",
     "        maxvalue = i\n",
@@ -46,6 +54,8 @@
     "def myrange():\n",
     "    rangevalue = max()-min()\n",
     "    return myrange\n",
+    "print(mean(values))\n",
+    "\n",
     "\n"
    ]
   },
@@ -54,7 +64,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
